Minor changes on login and register pages (visible password input turned invisible) and some authorization issues.

--- a/App.Web.Mvc/Views/Auth/Login.cshtml
+++ b/App.Web.Mvc/Views/Auth/Login.cshtml
@@ -34,7 +34,7 @@
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input asp-for="Password" class="form-control" />
+                                            <input type="password" asp-for="Password" class="form-control" />
                                             <label class="form-label" asp-for="Password">Şifre</label>
                                             <span asp-validation-for="Password" class="text-danger"></span>
                                         </div>
