--- a/App.Web.Mvc/Views/Auth/Register.cshtml
+++ b/App.Web.Mvc/Views/Auth/Register.cshtml
@@ -42,7 +42,7 @@
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input asp-for="@Model.Password" class="form-control" />
+                                            <input type="password" asp-for="@Model.Password" class="form-control" />
                                             <label class="form-label" asp-for="@Model.Password">Şifre</label>
                                             <span asp-validation-for="Password" class="text-danger"></span>
                                         </div>
@@ -51,7 +51,7 @@
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input asp-for="@Model.PasswordConfirm" class="form-control" />
+                                            <input type="password" asp-for="@Model.PasswordConfirm" class="form-control" />
                                             <label class="form-label" asp-for="@Model.PasswordConfirm">Şifre Tekrar</label>
                                             <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
                                         </div>
